--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@farcaster/frame-sdk": ">=0.0.31 <1.0.0",
     "@farcaster/frame-wagmi-connector": ">=0.0.19 <1.0.0",
     "@farcaster/mini-app-solana": "^0.0.5",
+    "@neynar/nodejs-sdk": "^2.19.0",
+    "@neynar/react": "^0.9.7",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@tanstack/react-query": "^5.61.0",
     "@upstash/redis": "^1.34.3",
@@ -39,14 +42,13 @@
     "next": "15.0.3",
     "next-auth": "^4.24.11",
     "react": "^18",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.23.6",
     "wagmi": "^2.14.12",
-    "zod": "^3.24.2",
-    "@neynar/nodejs-sdk": "^2.19.0",
-    "@neynar/react": "^0.9.7"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
